hard-gists/1382972/run.log
=== Docker Run Log for 1382972 ===
Started at: Mi 29. Okt 12:11:53 CET 2025

[2025-10-29 12:11:54] START: Running container for 1382972
[2025-10-29 12:11:54] SUCCESS: Container 2bf7a703e5ec1db3d7cf3b0756ab027aa5398276dadad8f944b6623d6d1ef4c8 started for 1382972
=== Container logs for 1382972 ===
  File "/snippet.py", line 30
    print len(new_order), new_order
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1382972 ===
[2025-10-29 12:11:56] INFO: Container 2bf7a703e5ec1db3d7cf3b0756ab027aa5398276dadad8f944b6623d6d1ef4c8 has stopped
